header section complete without button anemation

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World-Cup 2023</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      src="https://kit.fontawesome.com/e8cc28838b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- html head section  -->
+    <header>
+      <section class="top-head">
+        <div class="head-article">
+          <h1 class="head-article-h1">Football is Freedom, a whole universe</h1>
+          <p>
+            Playing football with your feet is one thing, but playing football
+            with your heart is another!
+          </p>
+          <button class="btn-live">
+            <span>Football Live</span> <i class="fa-solid fa-tv"></i>
+          </button>
+        </div>
+        <div class="image">
+          <img
+            src="images/Banner Image-lewandowski-lewandowski.png"
+            alt="lewandowski"
+          />
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
