New HTML file match.html added

--- a/match.html
+++ b/match.html
@@ -42,9 +42,7 @@
       <section class="blog-container">
         <div class="side-navbar">
           <div class="important-nav">
-            <div class="upcoming-match">
-              <a href="match.html" target="_blank">Upcoming Match</a>
-            </div>
+            <div class="upcoming-match">Upcoming Match</div>
             <div class="all-group"><a href="blog.html">All Group</a></div>
             <div class="players-blog"><a href="blog.html">Blog</a></div>
           </div>
