--- a/blog.html
+++ b/blog.html
@@ -43,9 +43,9 @@
         <div class="side-navbar">
           <div class="important-nav">
             <div class="upcoming-match">
-              <a href="match.html" target="_blank">Upcoming Match</a>
+              <a href="match.html">Upcoming Match</a>
             </div>
-            <div class="all-group"><a href="blog.html">All Group</a></div>
+            <div class="all-group"><a href="#">All Group</a></div>
             <div class="players-blog"><a href="blog.html">Blog</a></div>
           </div>
         </div>
