--- a/match.html
+++ b/match.html
@@ -42,147 +42,106 @@
       <section class="blog-container">
         <div class="side-navbar">
           <div class="important-nav">
-            <div class="upcoming-match">Upcoming Match</div>
-            <div class="all-group"><a href="blog.html">All Group</a></div>
-            <div class="players-blog"><a href="blog.html">Blog</a></div>
+            <div class="upcoming-match" style="background-color: red">
+              <a style="color: white" href="match.html">Upcoming Match</a>
+            </div>
+            <div class="all-group"><a href="#">All Group</a></div>
+            <div class="players-blog" style="background-color: white">
+              <a style="color: black" href="blog.html">Blog</a>
+            </div>
           </div>
         </div>
-        <!--Start-- Blog Details Container = Blog 1 to blog 6 -->
-        <div class="blog-article-container">
-          <!-- blog =1 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+        <!--Start-- Match Details Container = Match 1 to Match 6 -->
+        <div class="matches">
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" />
+                <span>vs</span>
+                <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
-          <!-- blog=2 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" /><span
+                  >vs</span
+                >
+                <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
-          <!-- blog=3 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" />
+                <span>vs</span> <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
-          <!-- blog = 4 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" />
+                <span>vs</span> <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
-          <!-- blog=5 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" />
+                <span>vs</span> <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
-          <!-- blog = 6 -->
-          <div class="blogs">
-            <article class="blog">
-              <div class="thumbnail">
-                <img src="images/Blog Image.png" alt="Blog Image" />
-              </div>
-              <div class="blog-info">
-                <div class="blog-btn">
-                  <button>Transfer</button>
-                </div>
-                <div class="blog-title">
-                  <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
-                  </h2>
-                </div>
-                <div class="blog-icons">
-                  <i class="fa-solid fa-clock"></i><span>10h</span>
-                  <i class="fa-solid fa-message"></i><span>23</span>
-                </div>
-              </div>
-            </article>
+          <div class="match">
+            <div class="thumbnail-flag">
+              <span
+                ><img src="images/germany Flag.png" alt="Germany" />
+                <span>vs</span> <img src="images/Flag.png" alt="France"
+              /></span>
+            </div>
+            <div class="country-names">
+              <h3>Germany VS France</h3>
+            </div>
+            <div class="date-time">
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
           </div>
         </div>
-        <!--End-- Total Blogs Container = Blog 1 to blog 6 -->
+        <!--End-- Total Match Container = Match 1 to Match 6 -->
       </section>
     </main>
     <!--End-- html blogs , Section = two -->
