All Mobile Tablet Desktop responsive requirement done

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,9 @@
     <header class="head">
       <section class="top-head">
         <div class="head-article">
-          <h1 class="head-article-h1">Football is Freedom, a whole universe</h1>
+          <p style="font-size: 2rem" class="head-article-h1">
+            Football is Freedom, Football is Love , Football is Live
+          </p>
           <p>
             Playing football with your feet is one thing, but playing football
             with your heart is another!
@@ -30,7 +32,8 @@
         </div>
         <div class="image">
           <img
-            src="images/Banner Image-lewandowski-lewandowski.png"
+            style="border: 2rem"
+            src="images/marcelo.png"
             alt="lewandowski"
           />
         </div>
@@ -184,9 +187,12 @@
             </article>
           </div>
         </div>
+
         <!--End-- Total Blogs Container = Blog 1 to blog 6 -->
+        <!-- view all tab -->
       </section>
     </main>
+    <div class="view">View All</div>
     <!--End-- html blogs , Section = two -->
     <!--Start-- Footer , Section = Three -->
     <footer style="margin: 0px; padding: 0px">
