--- a/match.html
+++ b/match.html
@@ -29,10 +29,7 @@
           </button>
         </div>
         <div class="image">
-          <img
-            src="images/Banner Image-lewandowski-lewandowski.png"
-            alt="lewandowski"
-          />
+          <img src="images/marcelo.png" alt="lewandowski" />
         </div>
       </section>
     </header>
@@ -144,6 +141,7 @@
         <!--End-- Total Match Container = Match 1 to Match 6 -->
       </section>
     </main>
+    <div class="view">View All</div>
     <!--End-- html blogs , Section = two -->
     <!--Start-- Footer , Section = Three -->
     <footer style="margin: 0px; padding: 0px">
