Animation Done & Hole Project Completed

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
             with your heart is another!
           </p>
           <button class="btn-live">
-            <span>Football Live</span> <i class="fa-solid fa-tv"></i>
+            <span>Starting Soon!</span> <i class="fa-solid fa-tv"></i>
           </button>
         </div>
         <div class="image">
@@ -66,7 +66,8 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Cristiano Ronaldo becomes all-time leading scorer record on
+                    807 goals
                   </h2>
                 </div>
                 <div class="blog-icons">
@@ -88,7 +89,8 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Gaming company Funatix Club becomes official fantasy partner
+                    of I-League
                   </h2>
                 </div>
                 <div class="blog-icons">
@@ -110,7 +112,8 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    The best sports coverage from around the world, covering:
+                    Football
                   </h2>
                 </div>
                 <div class="blog-icons">
@@ -132,7 +135,8 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Get the latest Football News, Live Scores and more on The
+                    Times of India
                   </h2>
                 </div>
                 <div class="blog-icons">
@@ -154,7 +158,7 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Latest football news in Bangladesh. Live football fixtures
                   </h2>
                 </div>
                 <div class="blog-icons">
@@ -176,7 +180,8 @@
                 </div>
                 <div class="blog-title">
                   <h2>
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    All today's latest football news from across the world
+                    favourite club
                   </h2>
                 </div>
                 <div class="blog-icons">
