--- a/match.html
+++ b/match.html
@@ -19,7 +19,9 @@
     <header class="head">
       <section class="top-head">
         <div class="head-article">
-          <h1 class="head-article-h1">Football is Freedom, a whole universe</h1>
+          <p style="font-size: 2rem" class="head-article-h1">
+            Football is Freedom, Football is Love , Football is Live
+          </p>
           <p>
             Playing football with your feet is one thing, but playing football
             with your heart is another!
@@ -75,10 +77,10 @@
               /></span>
             </div>
             <div class="country-names">
-              <h3>Germany VS France</h3>
+              <h3>France VS Germany</h3>
             </div>
             <div class="date-time">
-              <p>April 01, 2023, 1.00 AM</p>
+              <p>April 05, 2023, 3.00 AM</p>
             </div>
           </div>
           <div class="match">
@@ -89,10 +91,10 @@
               /></span>
             </div>
             <div class="country-names">
-              <h3>Germany VS France</h3>
+              <h3>Netherland VS France</h3>
             </div>
             <div class="date-time">
-              <p>April 01, 2023, 1.00 AM</p>
+              <p>April 10, 2023, 2.00 AM</p>
             </div>
           </div>
           <div class="match">
@@ -103,10 +105,10 @@
               /></span>
             </div>
             <div class="country-names">
-              <h3>Germany VS France</h3>
+              <h3>Germany VS Brazil</h3>
             </div>
             <div class="date-time">
-              <p>April 01, 2023, 1.00 AM</p>
+              <p>April 12, 2023, 11.00 PM</p>
             </div>
           </div>
           <div class="match">
@@ -117,10 +119,10 @@
               /></span>
             </div>
             <div class="country-names">
-              <h3>Germany VS France</h3>
+              <h3>Italy VS France</h3>
             </div>
             <div class="date-time">
-              <p>April 01, 2023, 1.00 AM</p>
+              <p>April 20, 2023, 1.00 AM</p>
             </div>
           </div>
           <div class="match">
@@ -131,10 +133,10 @@
               /></span>
             </div>
             <div class="country-names">
-              <h3>Germany VS France</h3>
+              <h3>Argentina VS France</h3>
             </div>
             <div class="date-time">
-              <p>April 01, 2023, 1.00 AM</p>
+              <p>May 01, 2023, 1.00 AM</p>
             </div>
           </div>
         </div>
